# Recrutement

sql/: Makefile
sql/src/: sql.c  sql.h
src/: meson.build
subject_1/: Dockerfile  Makefile  README.md  config  meson.build  regex  setup.sh
subject_1/EML/: code.eml
subject_1/src/: main.c  meson.build
subject_1/src/database/: communication.c  communication.h  hash.c  hash.h  info_connection.c  info_connection.h  meson.build  process.c  process.h
subject_1/src/extraction/: extraction_eml.c  extraction_eml.h  meson.build
subject_1/src/utils/: meson.build  xalloc.c  xalloc.h
subject_1/tests/: test_info_connection.cpp
subject_2/: Dockerfile  meson.build  meson_options.txt
subject_2/EML/: google.eml
subject_2/src/: meson.build
subject_2/tests/: meson.build
subject_3/: README.md
tests/: meson.build
